Fixed an issue with player level not showing

--- a/leagueproj/src/Components/PlayerProfile/PlayerProfile.css
+++ b/leagueproj/src/Components/PlayerProfile/PlayerProfile.css
@@ -13,7 +13,8 @@
   flex-direction: column;
   align-items: center;
   background-color: rgb(36,33,36);
-  width: 350px;
+  width: 400px;
+  height: 220px;
   color: white;
   font-size: 30px;
   font-weight: 700;
@@ -28,7 +29,7 @@
 
 .level {
   position: absolute;
-  bottom: 125px;
+  bottom: 145px;
   background-color: rgb(16,12,8);
   width: 40px;
   color: white;
@@ -73,7 +74,7 @@
   border: 1px solid rgb(188,143,143);
 }
 .BRONZE {
-  border: 1px solid rgb(205,133,63);
+  border: 2px solid rgb(205,133,63);
 }
 .SILVER {
   border: 1px solid rgb(169,169,169);
